welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: too many arguments for method getCouleurSol: ()java.awt.Color
		getCouleurSol(c)
                             ^Array1:9: error: too many arguments for method getCouleurSol: ()java.awt.Color
		tab(i) = getCouleurSol(c)
                                      ^Array1:23: error: not enough arguments for method remplirTableau: (c: java.awt.Color)Unit.
Unspecified value parameter c.
remplirTableau()
              ^